Adding Angular Material

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,4 +11,6 @@
 <body>
   <app-root></app-root>
 </body>
+
+<link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </html>
